--- a/Ray/11-serialization-with-json/projects/starter/pubspec.yaml
+++ b/Ray/11-serialization-with-json/projects/starter/pubspec.yaml
@@ -19,10 +19,15 @@ dependencies:
   flutter_svg: ^0.19.0
   shared_preferences: ">=0.5.8 <2.0.0"
   flutter_statusbarcolor: ^0.2.3
+  json_annotation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  build_runner: ^1.10.0
+  json_serializable: ^3.5.0
+
 
 flutter:
 
