--- a/fooderlich/pubspec.yaml
+++ b/fooderlich/pubspec.yaml
@@ -53,6 +53,10 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/
+    - assets/food_pics/
+    - assets/magazine_pics/
+    - assets/sample_data/
+    - assets/profile_pics/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
