--- a/fooderlich/pubspec.yaml
+++ b/fooderlich/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.0
+  flutter_colorpicker: 
+  intl:
+  uuid: 
+  provider:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +58,7 @@ flutter:
   assets:
     - assets/
     - assets/food_pics/
+    - assets/fooderlich_assets/
     - assets/magazine_pics/
     - assets/sample_data/
     - assets/profile_pics/
