--- a/Ray/06-interactive-widgets/projects/final/pubspec.yaml
+++ b/Ray/06-interactive-widgets/projects/final/pubspec.yaml
@@ -10,11 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^2.1.0
-  provider: ^5.0.0
-  flutter_colorpicker: ^0.4.0
-  intl: ^0.17.0
-  uuid: ^3.0.4
+  google_fonts: 
+  provider: 
+  flutter_colorpicker: 
+  intl: 
+  uuid:
 
 dev_dependencies:
   flutter_test:
