--- a/Fooderlich3/ios/Runner/Info.plist
+++ b/Fooderlich3/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 		<string>raywenderlich.com</string>
 		<key>CFBundleURLSchemes</key>
 		<array>
-		<string>fooderlich</string>
+		<string>Fooderlich</string>
 		</array>
 		</dict>
 	</array>
