--- a/Fooderlich4/pubspec.yaml
+++ b/Fooderlich4/pubspec.yaml
@@ -17,10 +17,14 @@ dependencies:
   flutter_slidable: 
   flutter_svg: 
   shared_preferences: 
+  json_annotation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  build_runner: 
+  json_serializable:  ^3.5.1
 
 flutter:
 
