--- a/Demos/flutter_application_demos/pubspec.yaml
+++ b/Demos/flutter_application_demos/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   date_format:
   flutter_datetime_picker:
+  flutter_swiper:
 
 dev_dependencies:
   flutter_test:
