--- a/Demos/flutter_application_demos/pubspec.yaml
+++ b/Demos/flutter_application_demos/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   date_format:
   flutter_datetime_picker:
   flutter_swiper:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
